--- a/src/app/pages/laboratory-management/laboratory-management.component.scss
+++ b/src/app/pages/laboratory-management/laboratory-management.component.scss
@@ -533,3 +533,43 @@ $shadow-lg: 0 8px 24px rgba(0, 0, 0, 0.15);
     }
   }
 }
+
+// Accesibilidad
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+// Mejorar el foco para accesibilidad
+button:focus-visible,
+.mat-mdc-button:focus-visible,
+.mat-mdc-raised-button:focus-visible,
+.mat-mdc-stroked-button:focus-visible {
+  outline: 2px solid $primary-color;
+  outline-offset: 2px;
+}
+
+.mat-mdc-form-field input:focus {
+  outline: 2px solid $primary-color;
+  outline-offset: 2px;
+}
+
+// Mejorar contraste para usuarios con discapacidad visual
+@media (prefers-contrast: high) {
+  .status-active {
+    background-color: #000 !important;
+    color: #fff !important;
+  }
+  
+  .status-inactive {
+    background-color: #666 !important;
+    color: #fff !important;
+  }
+}
