--- a/src/app/auth/pages/login/login.component.scss
+++ b/src/app/auth/pages/login/login.component.scss
@@ -175,7 +175,7 @@
 }
 
 .login-title {
-  color: var(--color-primary-light);
+  color: black;
   font-size: var(--font-size-3xl);
   font-weight: 700;
   margin-bottom: var(--spacing-sm);
@@ -338,7 +338,7 @@
 }
 
 .forgot-password-link {
-  color: var(--color-primary-light);
+  color: var(--color-info);
   font-size: var(--font-size-sm);
   font-weight: 300;
   text-decoration: underline;
